# Biometric-Attendence

./: .gitignore  Employee.xlsx  README.md  main.py  pyproject.toml
